<?xml version="1.0"?>
<package format="3">
  <name>dggrs_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for the DGGRS scaffold.</description>
  <maintainer email="maintainers@example.com">DGGRS Contributors</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>dggrs_bridge</exec_depend>
  <exec_depend>dggrs_spatial_math</exec_depend>
  <exec_depend>dggrs_streamer</exec_depend>
  <exec_depend>dggrs_vision</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>