<?xml version="1.0"?>
<package format="3">
  <name>dggrs_vision</name>
  <version>0.1.0</version>
  <description>High-level ROS 2 vision package scaffold for DGGRS.</description>
  <maintainer email="maintainers@example.com">DGGRS Contributors</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
